<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/global_default_view_margin"
            android:layout_marginRight="@dimen/global_default_view_margin"

    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:weightSum="4"
                android:background="@drawable/bg_item_letter_deactive"
                android:layout_marginTop="@dimen/global_default_view_margin"
        >
            <TextView android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:text="@string/fragment_record_date"
                      style="@style/TextAppearance.WhereWords.bigWhiteText"

            />
            <TextView android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:text="@string/fragment_record_time"
                      style="@style/TextAppearance.WhereWords.bigWhiteText"


            />
            <TextView android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:text="@string/fragment_record_score"
                      style="@style/TextAppearance.WhereWords.bigWhiteText"


            />
            <TextView android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:text="@string/fragment_record_count"
                      style="@style/TextAppearance.WhereWords.bigWhiteText"


            />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recordListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_record"
                android:layout_marginTop="@dimen/global_default_view_margin"

        />
    </LinearLayout>
</layout>